# md-real-estate

./: CMakeLists.txt  README.md  conanfile.txt
.cache/clangd/index/: app.cpp.32DA6351E07941B7.idx  data_handler.cpp.5CF36ECA3FB38E10.idx  data_handler.hpp.BEC8BA11411AFECA.idx  estimation_view.cpp.AA7BB4E29D91E997.idx  estimation_view.hpp.E63B19EDD452B874.idx  input.cpp.EEEF25BC3B6B638F.idx  input.hpp.2D21EC9E2AF2EE44.idx  main.cpp.CEFD490B1F2ABAE5.idx  mortgage_view.cpp.2DA932AD68631B2C.idx  mortgage_view.hpp.004AB8459198918C.idx  price_mode_xgboost.cpp.C7C71C70816ABB3F.idx  price_model.cpp.73C240A3637F69F2.idx  price_model.hpp.477A2A49DD3EF4FD.idx  price_model_gradient_boosted.cpp.C7A101E081677CEC.idx  price_model_gradient_boosted.hpp.A7F8F8FEEBB0DE93.idx  price_model_gradient_boosted_elastic_net.cpp.1DAAB5C95DB2CBAB.idx  price_model_gradient_boosted_elastic_net.hpp.833BE0646A75C795.idx  price_model_ols.cpp.E04661183D348640.idx  price_model_ols.hpp.610CC3BFAB08F893.idx  price_model_xgboost.cpp.3BF2A66D0B89BCED.idx  price_model_xgboost.hpp.5816F6E7CD5542D8.idx  raygui.h.F3B81E2B0BA28FFA.idx  regression_tree.cpp.A4A2B5E5FAB2006D.idx  regression_tree.hpp.6D360E1D4215C3DB.idx  search_select.cpp.98731BF8F2D9598F.idx  search_select.hpp.BA5145A6CCAF91F9.idx  test.cpp.EE109D7813462A32.idx  (+4 more)
data/: analyze_data.py  apartments.csv  filter_kaggle.py  get_categorical_data.py  get_links.py  links.csv  predictions.csv  raw_data.csv  scrape_data.py  test_elastic_net.py  test_xgboost.py
data/datasets/: .~lock.non_encoded_df.csv#  .~lock.renamed_fields.csv#  4000_nonfiltered.csv  euro_announcemetes.csv  final_data.csv  int_prices.csv  no_duplicate_data.csv  non_encoded_df.csv  renamed_fields.csv
data/kaggle-test/: .~lock.train.csv#  create_submission.py  predictions.csv  submission.csv  test_filtered.csv  train.csv  train_filtered.csv
scripts/: build.sh  build_libs.sh
src/: main.cpp
src/include/: raygui.h
src/price_model/: data_handler.cpp  data_handler.hpp  price_model.cpp  price_model.hpp  price_model_gradient_boosted.cpp  price_model_gradient_boosted.hpp  price_model_gradient_boosted_elastic_net.cpp  price_model_gradient_boosted_elastic_net.hpp  price_model_ols.cpp  price_model_ols.hpp  price_model_xgboost.cpp  price_model_xgboost.hpp  regression_tree.cpp  regression_tree.hpp  xgboost_tree.cpp  xgboost_tree.hpp
src/ui/: app.hpp  estimation_view.cpp  estimation_view.hpp  input.cpp  input.hpp  mortgage_view.cpp  mortgage_view.hpp  search_select.cpp  search_select.hpp
